Replace with jekyll front-matter and markdown

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>Built with love using GitHub Pages.</p>
-</body>
-</html>
+---
+layoud: default
+title: oscarb.se - Technology and Learning
+---
+
+*Hello world* with Markdown.
