--- a/images/view-logo.html
+++ b/images/view-logo.html
@@ -1,6 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <body>
-<img src="./logo.svg">
+
+<h1>My first SVG</h1>
+
+<img src="./logo.svg"/>
+
+<svg width="100" height="100">
+  <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+</svg>
+
 </body>
 </html>
