--- a/images/view-logo.html
+++ b/images/view-logo.html
@@ -4,7 +4,7 @@
 
 <h1>My first SVG</h1>
 
-<object type="image/svg+xml" data="./logo.svg" height="100px" width="100px">No support</object>
+<object type="image/svg+xml" data="./logo.svg">No support</object>
 
 <svg width="100" height="100">
   <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
