--- a/images/view-logo.html
+++ b/images/view-logo.html
@@ -6,6 +6,8 @@
 
 <object type="image/svg+xml" data="./logo.svg">No support</object>
 
+<img src="./logo.svg" />
+
 <svg width="100" height="100">
   <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
 </svg>
